using System;
using System.Collections.Generic;
using System.Text;

namespace Budweg.Models
{

    public enum  ProcessingStatus { Received, Disassembled, Scrapped, Dispatched}
    
}
