@startuml - Design Class Diagram (DCD) Budweg
left to right direction 
skinparam classAttributeIconSize 0

package "ViewModels (Application)"{
    class MainViewModel {
        - brakeCaliperRepository: BrakeCaliperRepository
        - stationRepository: StationRepository
        - sparePartRepository: SparePartRepository
        + MainViewModel(brakeCaliperRepository: BrakeCaliperRepository,
        stationRepository: StationRepository, sparePartRepository: SparePartRepository)
    }
}

package "Persistence (Repositories)" {
    class BrakeCaliperRepository {
        - «readonly» connectionString : string
        - brakeCaliper : BrakeCaliper[0..*]
        + CreateBrakeCaliper()
        + FindByBarcode(barcode: String): BrakeCaliper
        + MoveToNextStation(caliperNumber: String)
        + UpdateStatus(caliperNumber: String, status: ProcessingStatus)
        + ListByStation(stationName: String): BrakeCaliper[0..*]

    }
    class StationRepository {
        - «readonly» connectionString : string
        - station : Station[0..*] 
        + CreateStation()
        + FindByName(stationName: String): Station
        + ListAllStations(): Station[0..*]
        + GetNextStation(stationName: String): Station
    }
    class SparePartRepository {
        - «readonly» connectionString : string
        - sparePart : SparePart[0..*]
        + CreateSparePart()
        + FindByStation(stationName: String): SparePart[0..*]
        + AddSparePart(sparePartType: String, sparePartQuantity: int, stationName: String)
        + UpdateQuantity(sparePartType: String, sparePartQuantity: int)
    }
}

package "Models (Domain)" {
    class Station {
        + stationId: int
        - stationType: String
        - stationName: String
        + «constructor» Station(id : int)
    }

    class BrakeCaliper {
        + caliperId: int
        - caliperType: String
        - caliperStatus: ProcessingStatus
        - barcode: String
        - caliperNumber: String
        - orderNumber: String 
        - note: String
        + «constructor» BrakeCaliper(id : int)
    }

    class ProcessingStatus <<enumeration>> {
        received
        disassembled
        scrapped
        dispatched
    }

    class SparePart{
       + sparePartId: int
       - sparePartType: String
       - sparePartQuantity: int
       + «constructor» SparePart(id : int)
    }
}



MainViewModel .. StationRepository
MainViewModel .. BrakeCaliperRepository
MainViewModel .. SparePartRepository

StationRepository .. Station
BrakeCaliperRepository .. BrakeCaliper
SparePartRepository .. SparePart

BrakeCaliper "0..*" -- "1..*" Station
ProcessingStatus .. BrakeCaliper
SparePart "0..*" -- "1..*" Station


hide circle

@enduml